k8s_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boncoin-service
  namespace: boncoin
spec:
  selector:
    app: boncoin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
