k8s_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karity-ingress-prod
  namespace: boncoin
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: boncoin.st2i.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boncoin-service
                port:
                  number: 80
